# gateway/api/items.py
@@ -26,15 +26,32 @@ def get_category():
         return result, 400
     return result
 
-def create_category(data):
+
+def create_item(image, categoryname, name):
     rpc = settings.rpc
     connection = rpc.get_connection()
     try:
-        result = json.loads(connection.item_service.create_category(data["name"]))
+        result = json.loads(connection.item_service.insert_item(categoryname, name))
+        if image:
+            print(type(image))
+            connection.file_service.insert_item_image(result["id"], image.read().hex())
     finally:
         rpc.release_connection(connection)
     if "error" in result:
         return result, 400
+
+    return result
+
+def get_item_image(item_id):
+    rpc = settings.rpc
+    connection = rpc.get_connection()
+    try:
+        result = connection.file_service.get_item_image(item_id)
+    finally:
+        rpc.release_connection(connection)
+    if "error" in result:
+        return result, 400
+
     return result
 
 @jwt_required
@@ -47,7 +64,7 @@ def rent(data):
         result = connection.rent_service.rent_item(profile_id, item_id)
     finally:
         rpc.release_connection(connection)
-    if "error" in result:
+    if "error" in result and result["error"] is True:
         return result, 400
     return result
 
@@ -61,6 +78,6 @@ def returned(data):
         result = connection.rent_service.return_item(profile_id, lend_id)
     finally:
         rpc.release_connection(connection)
-    if "error" in result:
+    if "error" in result and result["error"] is True:
         return result, 400
     return result
